--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*!
+/* /*!
 Theme Name: kirki
 Theme URI: http://underscores.me/
 Author: Underscores.me
@@ -966,4 +966,11 @@ textarea {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 1.5em;
+} */
+
+
+.about{
+	width: 200px;
+	height: 200px;
+	background-color: #800080;
 }
